--- a/index.html
+++ b/index.html
@@ -76,41 +76,21 @@
 
     <div class="container">
         <div class="main">
-            <img src="profile.jpg" alt="Profile Picture">
+            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpapercave.com%2Fwp%2Fwp9786175.jpg&f=1&nofb=1&ipt=77ede7bd914674ba144861b780477754c3a125b5c8a371d46875f9d776a46b83&ipo=images" alt="Profile Picture">
             <h2>Hello!</h2>
             <p>Welcome to my personal website. My name is [Your Name] and I am a [Your Profession/Role]. I am passionate about [Your Passion/Interest] and have been working in this field for [X] years. Here, you will find more information about my skills, hobbies, and how to contact me.</p>
         </div>
 
-        <div class="section">
-            <h2>Skills</h2>
-            <p>I have expertise in the following areas:</p>
-            <ul>
-                <li>Skill 1</li>
-                <li>Skill 2</li>
-                <li>Skill 3</li>
-                <li>Skill 4</li>
-            </ul>
-        </div>
-
-        <div class="section">
-            <h2>Hobbies</h2>
-            <p>In my free time, I enjoy:</p>
-            <ul>
-                <li>Hobby 1</li>
-                <li>Hobby 2</li>
-                <li>Hobby 3</li>
-            </ul>
-        </div>
 
         <div class="section">
             <h2>Contact Me</h2>
             <p>If you'd like to get in touch, you can reach me at:</p>
-            <p>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+            <p>Email: <a href="amarjeetkour8907@gmail.com">youremail@example.com</a></p>
         </div>
     </div>
 
     <footer>
-        <p>&copy; 2024 [Your Name]. All rights reserved.</p>
+        <p>&copy; 2024 Jassi. All rights reserved.</p>
     </footer>
 </body>
 </html>
