--- a/index.html
+++ b/index.html
@@ -1,96 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-        }
-        header {
-            background: #50b3a2;
-            color: #fff;
-            padding-top: 30px;
-            min-height: 70px;
-            border-bottom: #e8491d 3px solid;
-        }
-        header a {
-            color: #fff;
-            text-decoration: none;
-            text-transform: uppercase;
-            font-size: 16px;
-        }
-        header ul {
-            padding: 0;
-            list-style: none;
-        }
-        header li {
-            display: inline;
-            padding: 0 20px 0 20px;
-        }
-        .main {
-            padding: 20px;
-            background: #fff;
-            margin-top: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .main img {
-            float: left;
-            margin-right: 20px;
-            border-radius: 50%;
-            width: 150px;
-            height: 150px;
-        }
-        .section {
-            margin-bottom: 40px;
-        }
-        .section h2 {
-            color: #50b3a2;
-        }
-        footer {
-            background: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-            margin-top: 20px;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <div class="container">
-            <h1>About Me</h1>
-        </div>
-    </header>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
 
-    <div class="container">
-        <div class="main">
-            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpapercave.com%2Fwp%2Fwp9786175.jpg&f=1&nofb=1&ipt=77ede7bd914674ba144861b780477754c3a125b5c8a371d46875f9d776a46b83&ipo=images" alt="Profile Picture">
-            <h2>Hello!</h2>
-            <p>Welcome to my personal website. My name is [Your Name] and I am a [Your Profession/Role]. I am passionate about [Your Passion/Interest] and have been working in this field for [X] years. Here, you will find more information about my skills, hobbies, and how to contact me.</p>
-        </div>
+    <link rel="stylesheet" href="./global.css" />
+    <link rel="stylesheet" href="./index.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
+    />
+  </head>
+  <body>
+    <div class="cover">
+      <section class="content">
+        <img
+          class="figma-1-icon"
+          loading="lazy"
+          alt=""
+          src="./public/figma-1@2x.png"
+        />
 
-
-        <div class="section">
-            <h2>Contact Me</h2>
-            <p>If you'd like to get in touch, you can reach me at:</p>
-            <p>Email: <a href="amarjeetkour8907@gmail.com">youremail@example.com</a></p>
+        <div class="website-description">
+          <div class="website-title">
+            <div class="joe-free">Joe - Free Figma Personal Website Design</div>
+            <div class="author">
+              <div class="by-templatesjunglecom">
+                <span class="by">by </span>
+                <span class="templatesjunglecom">TemplatesJungle.com</span>
+              </div>
+            </div>
+          </div>
         </div>
+      </section>
+      <section class="navigation">
+        <img
+          class="works-icon"
+          loading="lazy"
+          alt=""
+          src="./public/works@2x.png"
+        />
+
+        <img
+          class="home-icon"
+          loading="lazy"
+          alt=""
+          src="./public/home@2x.png"
+        />
+      </section>
+      <section class="navigation1">
+        <img
+          class="info-icon"
+          loading="lazy"
+          alt=""
+          src="./public/info@2x.png"
+        />
+
+        <img
+          class="contact-icon"
+          loading="lazy"
+          alt=""
+          src="./public/contact@2x.png"
+        />
+      </section>
     </div>
-
-    <footer>
-        <p>&copy; 2024 Jassi. All rights reserved.</p>
-    </footer>
-</body>
+  </body>
 </html>
