--- a/index.html
+++ b/index.html
@@ -1,68 +1,76 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1, width=device-width" />
-
-    <link rel="stylesheet" href="./global.css" />
-    <link rel="stylesheet" href="./index.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap"
-    />
-  </head>
-  <body>
-    <div class="cover">
-      <section class="content">
-        <img
-          class="figma-1-icon"
-          loading="lazy"
-          alt=""
-          src="./public/figma-1@2x.png"
-        />
-
-        <div class="website-description">
-          <div class="website-title">
-            <div class="joe-free">Joe - Free Figma Personal Website Design</div>
-            <div class="author">
-              <div class="by-templatesjunglecom">
-                <span class="by">by </span>
-                <span class="templatesjunglecom">TemplatesJungle.com</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="navigation">
-        <img
-          class="works-icon"
-          loading="lazy"
-          alt=""
-          src="./public/works@2x.png"
-        />
-
-        <img
-          class="home-icon"
-          loading="lazy"
-          alt=""
-          src="./public/home@2x.png"
-        />
-      </section>
-      <section class="navigation1">
-        <img
-          class="info-icon"
-          loading="lazy"
-          alt=""
-          src="./public/info@2x.png"
-        />
-
-        <img
-          class="contact-icon"
-          loading="lazy"
-          alt=""
-          src="./public/contact@2x.png"
-        />
-      </section>
-    </div>
-  </body>
-</html>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">  
+    <title>Links website</title>
+    <style>
+      body {
+        background: #232526;  
+        background: -webkit-linear-gradient(to right, #414345, #232526);  
+        background: linear-gradient(to right, #414345, #232526); 
+      }
+      .container {
+        width: 100%;
+        padding-right: 15px;
+        padding-left: 15px;
+        margin-right: auto;
+        margin-left: auto;
+      }
+      .image {
+        background-image: url("https://play-lh.googleusercontent.com/P7Gnsyf8J_3M816auulI2Z8mOjAJDjcl7Hpzk-qe6otHBcEQKWxtaayl2QWraPxgkw");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center; 
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        margin: 0 auto;
+        border: 5px solid #fdf5e6;
+      }
+      a {
+        font-size: large;
+      }
+      .w3-border {
+        border: 3px solid #ccc !important;
+      }
+      .links-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap:20px;
+      }
+      .links-container a {
+        width: 100%;
+        color: #414345 !important;
+        transition: 0.2s;
+      }
+      .links-container a:hover {
+        opacity: 1;
+      }
+      .profession {
+        margin-top: 15px !important;
+      }
+      .profession span {
+        font-size: 14px;
+      }
+      .icons {
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+      }
+      .icons a {
+        text-decoration: none;
+      }
+      .icons a svg {
+        fill: #fdf5e6 !important;
+        transform: scale(1);
+      }
+      .border {
+        border: 3px ridge #fdf5e6;
+      }
+      .contact {
+        text-align: center;
+        color: #fdf5
