--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-image: url('path_to_image'); /* use the path of your uploaded image */
+            background-image: url('DALL·E 2024-09-05 23.38.09 - A technical cybersecurity background with a dark gray to light blue gradient. The background includes circuit-like patterns%2C hexagonal shapes%2C and dig.webp'); /* use the path of your uploaded image */
             background-size: cover;
             background-position: center;
             font-family: Arial, sans-serif;
