--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
 
     <div class="container">
         <div class="about-content">
-            <h1>About Me</h1>
-            <p>Welcome! I am [Your Name], a passionate [Your Profession] with a focus on cybersecurity and technology. 
-               My journey involves... [Add more personal details here].</p>
+            <h1>Jaspinder Singh</h1>
+            <p>I am passionate cybersecurity enthusiast with a mission to help people and businesses stay secure in the digital world.</p>
         </div>
     </div>
 
