--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-image: url('DALL%C2%B7E%202024-09-05%2023.38.09%20-%20A%20technical%20cybersecurity%20background%20with%20a%20dark%20gray%20to%20light%20blue%20gradient.%20The%20background%20includes%20circuit-like%20patterns%2C%20hexagonal%20shapes%2C%20and%20dig.webp'); /* use the path of your uploaded image */
+            background-image: url('background'); /* use the path of your uploaded image */
             background-size: cover;
             background-position: center;
             font-family: Arial, sans-serif;
