--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 
             <!-- Social Media Links -->
             <div class="social-links">
-                <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
-                <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.youtube.com/@CyberGuardInsight" target="_blank"><i class="fab fa-youtube"></i></a>
+                <a href="https://www.instagram.com/randhawa_ja551/" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://x.com/Jass_iiii" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
         </div>
     </div>
