--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <!-- Social Media Links -->
             <div class="social-links">
                 <a href="https://www.youtube.com/@CyberGuardInsight" target="_blank"><i class="fab fa-youtube"></i></a>
-                <a href="https://www.instagram.com/randhawa_ja551/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/jaspinder-singh-664047221/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="https://x.com/Jass_iiii" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
